# baserow-rs

./: .gitignore  Cargo.toml  README.adoc  README.md  baserow_config.json.template
baserow-client/: Cargo.toml
baserow-client/src/: client.rs  lib.rs  url_builder.rs
baserow-codegen/: Cargo.toml
baserow-codegen/src/: baserow_config.rs  client.rs  field_types.rs  generator.rs  main.rs
src/: baserow_config.rs  main.rs
