[package]
name = "baserow-codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
snafu = "0.8.6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
quote = "1.0"
convert_case = "0.8"
syn = "2.0.101"
prettyplease = "0.2.33"
strum = "0.27"
strum_macros = "0.27.1"


