[workspace]
resolver = "2"
members = ["baserow-codegen", "baserow-client"]

[workspace.dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
snafu = "0.8.6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }

