[package]
name = "baserow-codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json =  { workspace = true }
serde =  { workspace = true }
snafu =  { workspace = true }
reqwest =  { workspace = true }
tokio =  { workspace = true }
quote = "1.0"
convert_case = "0.8"
syn = "2.0.101"
prettyplease = "0.2.33"
strum = "0.27"
strum_macros = "0.27.1"


